--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  animations: ^2.0.0
+  simple_animations: ^1.2.0
 
 
   # The following adds the Cupertino Icons font to your application.
